:construction: wip: extracted the blog's color pallet into reusable scss global variables

--- a/pages/home.html
+++ b/pages/home.html
@@ -63,7 +63,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="https://d1g6lioiw8beil.cloudfront.net/packs/css/application-e07ff331.css" data-turbolinks-track="reload" />
+    <!-- <link rel="stylesheet" media="screen" href="https://d1g6lioiw8beil.cloudfront.net/packs/css/application-e07ff331.css" data-turbolinks-track="reload" /> -->
+    <link rel="stylesheet" media="screen" href="/style/application.css" data-turbolinks-track="reload" />
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="2IhsM8Hyn0izTC2e00RXLs7Rr09G+CFvtif4voGbIkVJpeyQMRxlBi41FKx5MDz1Qs+8Q9cVw8st2OzGWaJMWA==" />
     
