--- a/pages/base-article.html
+++ b/pages/base-article.html
@@ -63,7 +63,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="https://d1g6lioiw8beil.cloudfront.net/packs/css/application-e07ff331.css" data-turbolinks-track="reload" />
+    <!-- <link rel="stylesheet" media="screen" href="https://d1g6lioiw8beil.cloudfront.net/packs/css/application-e07ff331.css" data-turbolinks-track="reload" /> -->
+    <link rel="stylesheet" media="screen" href="/style/application.css" data-turbolinks-track="reload" />
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="EqPPR0HwtmOcJrVnPZ3833a5kozsV9xucnkXeelTRsqDjk/ksR5MLQFfjFWX6ZcE+qeBgH26PsrphgMBMWoo1w==" />
     
